--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/use or https://modmuss50.me/fabric.html
-	minecraft_version=1.16-pre5
-	yarn_mappings=1.16-pre5+build.1
-	loader_version=0.8.7+build.201
+# check these on https://fabricmc.net/use or https://modmuss50.me/fabric.html
+minecraft_version=1.16
+yarn_mappings=1.16+build.1
+loader_version=0.8.8+build.202
 
 # Mod Properties
-	mod_version = 1.0.0
-	maven_group = pvp-toggle
-	archives_base_name = pvp-toggle
+mod_version = 1.0.1
+maven_group = pvp-toggle
+archives_base_name = pvp-toggle
 
 # Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.12.1+build.361-1.16
+# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
+fabric_version=0.13.1+build.370-1.16
