--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,15 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-# check these on https://fabricmc.net/use or https://modmuss50.me/fabric.html
-minecraft_version=1.16.4
-yarn_mappings=1.16.4+build.6
-loader_version=0.10.6+build.214
+# check these on https://fabricmc.net/use
+minecraft_version=1.17
+yarn_mappings=1.17+build.1
+loader_version=0.11.3
 
 # Mod Properties
-mod_version = 1.0.3
+mod_version = 1.0.4
 maven_group = pvp-toggle
 archives_base_name = pvp-toggle
 
 # Dependencies
-# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.25.1+build.416-1.16
+fabric_version=0.34.9+1.17
