--- a/gradle.properties
+++ b/gradle.properties
@@ -2,15 +2,15 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-# check these on https://fabricmc.net/use
-minecraft_version=1.17
-yarn_mappings=1.17+build.1
-loader_version=0.11.3
+# check these on https://fabricmc.net/versions.html
+minecraft_version=1.18
+yarn_mappings=1.18+build.1
+loader_version=0.12.6
 
 # Mod Properties
-mod_version = 1.0.4
+mod_version = 1.0.5
 maven_group = pvp-toggle
 archives_base_name = pvp-toggle
 
 # Dependencies
-fabric_version=0.34.9+1.17
+fabric_version=0.43.1+1.18
