--- a/gradle.properties
+++ b/gradle.properties
@@ -2,15 +2,15 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-# check these on https://fabricmc.net/versions.html
-minecraft_version=1.18
-yarn_mappings=1.18+build.1
-loader_version=0.12.6
+# check these on https://fabricmc.net/develop
+minecraft_version=1.19
+yarn_mappings=1.19+build.1
+loader_version=0.14.6
 
 # Mod Properties
-mod_version = 1.0.5
+mod_version = 1.0.6
 maven_group = pvp-toggle
 archives_base_name = pvp-toggle
 
 # Dependencies
-fabric_version=0.43.1+1.18
+fabric_version=0.55.2+1.19
